[package]
name = "mlt-core"
description = "MapLibre Tile library code"
version = "0.6.0"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bench]]
name = "decoding_e2e"
harness = false
required-features = ["__private"]

[[bench]]
name = "encoding_e2e"
harness = false
required-features = ["__private"]

[[bench]]
name = "decoding_utils"
harness = false
required-features = ["__private"]

[[bench]]
name = "decoding_strings"
harness = false
required-features = ["__private"]

[[bench]]
name = "encoding_from_mvt"
harness = false
required-features = ["__private"]

[features]
# Workaround until new WASM-compatible geo is released: both `tessellate` and
# `sort-coords-iter` transitively depend on the `geo` crate, which does not
# yet build on `wasm32-unknown-unknown`. Remove the feature gating once a
# WASM-capable `geo` release is available.
default = ["sort-coords-iter", "tessellate"]
tessellate = ["dep:geo", "geo/earcutr", "geo/multithreading"]
# Enables feature sort strategies (`SpatialMorton`, `SpatialHilbert`) which
# use `geo::CoordsIter` for bounds computation. Disable on WASM.
sort-coords-iter = ["dep:geo"]
arbitrary = ["dep:arbitrary", "geo-types/arbitrary"]
# Used internally for testing and benchmarking, not intended for public use
__private = []

[dependencies]
arbitrary = { workspace = true, optional = true }
bytemuck.workspace = true
enum_dispatch.workspace = true
fastpfor.workspace = true
fsst-rs.workspace = true
# Only used for tessellation; remove the `optional = true` once `geo` is WASM-capable.
geo = { workspace = true, optional = true }
geo-types.workspace = true
hex.workspace = true
hilbert_2d.workspace = true
hotpath.workspace = true
integer-encoding.workspace = true
mvt-reader.workspace = true
num-traits.workspace = true
num_enum.workspace = true
probabilistic-collections.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
thiserror.workspace = true
union-find.workspace = true
wide.workspace = true
zigzag.workspace = true

[dev-dependencies]
brotli.workspace = true
criterion.workspace = true
flate2.workspace = true
geo-types = { workspace = true, features = ["arbitrary"] }
insta.workspace = true
pretty_assertions.workspace = true
proptest.workspace = true
proptest-derive.workspace = true
rstest.workspace = true
test_each_file.workspace = true
zstd.workspace = true

[lints]
workspace = true

[[test]]
name = "geojson"
required-features = ["__private"]

[[test]]
name = "snapshots"
required-features = ["__private"]
