[package]
name = "mlt-legacy"
version = "0.1.0"
description = "Our original Rust implementation of the MapLibre Tile format"
repository.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[features]
default = []
test-snapshots = []

[dependencies]
bitvec = "1.0.1"
bytes = "1.10.1"
bytes-varint = "1.1.0"
fastpfor = { version = "0.6.3", features = ["cpp", "rust"] }
geo-types = "0.7.15"
geozero = { version = "0.15", features = ["with-mvt"] }
indexmap = "2.7.1"
morton-encoding = "2.0.1"
num-traits = "0.2.19"
num_enum = "0.7.3"
prost = "0.14.1"
prost-types = "0.14.1"
serde_columnar = "0.3.11"
thiserror = "2.0.11"
zigzag = "0.1.0"

[build-dependencies]
prost-build = "0.14.1"

[dev-dependencies]
insta = "1.43.2"
rayon = "1.11.0"
serde_json = "1.0.145"
walkdir = "2.5.0"

[lints]
workspace = true
