[package]
name = "mlt-nom"
description = "MapLibre Tile format parsing with nom"
version = "0.1.0"
repository.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
#galileo-mvt = "0.2.1"
#mlt = { path = "../mlt" }
#mvt = "0.10.3"
#mvt-reader = "2.1.0"
borrowme = "0.0.15"
hex = "0.4.3"
integer-encoding = "4.0.2"
num-traits = "0.2.19"
num_enum = "0.7.4"
thiserror = "2.0.11"
zigzag = "0.1.0"

[dev-dependencies]
insta = "1.43.2"
test_each_file = "0.3.5"

[lints.rust]
unsafe_code = "forbid"
unused_qualifications = "warn"

[lints.clippy]
cargo = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
multiple_crate_versions = "allow"
missing_panics_doc = "allow"
