[package]
name = "mlt-nom"
description = "MapLibre Tile format parsing with nom"
version = "0.1.0"
repository.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[[bin]]
name = "mlt-nom"
path = "src/main.rs"
required-features = ["cli"]

[features]
default = ["cli", "rayon"]
cli = ["dep:anyhow", "dep:clap", "dep:flate2", "dep:size_format", "dep:tabled", "dep:thousands", "dep:ratatui", "dep:crossterm"]
rayon = ["dep:rayon"]

[dependencies]
#galileo-mvt = "0.2.1"
#mlt = { path = "../mlt" }
#mvt = "0.10.3"
#mvt-reader = "2.1.0"
anyhow = { version = "1", optional = true }
borrowme = "0.0.15"
clap = { version = "4.5.58", optional = true, features = ["derive"] }
crossterm = { version = "0.29.0", optional = true }
fastpfor = "0.6"
flate2 = { version = "1", optional = true }
hex = "0.4.3"
integer-encoding = "4.0.2"
num-traits = "0.2.19"
num_enum = "0.7.4"
ratatui = { version = "0.30.0", optional = true }
rayon = { version = "1", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
size_format = { version = "1", optional = true }
strum = { version = "0.27.0", default-features = false, features = ["derive"] }
tabled = { version = "0.20", optional = true }
thiserror = "2.0.11"
thousands = { version = "0.2", optional = true }
zigzag = "0.1.0"

[dev-dependencies]
insta = "1.43.2"
json5 = "0.4"
pretty_assertions = "1.4"
rstest = "0.26.1"
test_each_file = "0.3.5"

[lints.rust]
unsafe_code = "forbid"
unused_qualifications = "warn"

[lints.clippy]
cargo = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

# Restrictions
panic_in_result_fn = "warn"
todo = "warn"
unused_trait_names = "warn"
unimplemented = "warn"

# Too noisy
missing_errors_doc = "allow"
multiple_crate_versions = "allow"
missing_panics_doc = "allow"
too_many_lines = "allow"
