[package]
name = "mlt-py"
description = "Python bindings for MapLibre Tile (MLT) format via PyO3"
version = "0.1.4"
readme = "README.md"
repository.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[lib]
name = "mlt_py"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "stub_gen"
path = "src/bins/stub_gen.rs"
required-features = ["abi3"]

[features]
abi3 = ["pyo3/abi3-py310", "generate-import-lib"]
generate-import-lib = ["pyo3/generate-import-lib"]

[dependencies]
geo-types.workspace = true
mlt-core.workspace = true
pyo3.workspace = true
pyo3-stub-gen.workspace = true
serde_json.workspace = true

[dev-dependencies]
pyo3 = { workspace = true, features = ["auto-initialize"] }
