[package]
name = "mlt-pyo3"
description = "Python bindings for MapLibre Tile (MLT) format via PyO3"
version = "0.1.0"
readme = "README.md"
repository.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[lib]
name = "mlt_pyo3"
crate-type = ["cdylib", "rlib"]

[features]
default = ["extension-module"]
extension-module = ["pyo3/extension-module"]

[dependencies]
mlt = { path = "../mlt", default-features = false }
pyo3 = { version = "0.24" }
serde_json = "1"

[dev-dependencies]
pyo3 = { version = "0.24", features = ["auto-initialize"] }

[lints.rust]
unsafe_code = "allow"
