[package]
name = "mlt-pyo3"
description = "Python bindings for MapLibre Tile (MLT) format via PyO3"
version = "0.1.0"
readme = "README.md"
repository.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[lib]
name = "mlt_pyo3"
crate-type = ["cdylib", "rlib"]

[features]
default = []

[dependencies]
geo-types.workspace = true
mlt-core = { path = "../mlt-core" }
pyo3.workspace = true
serde_json.workspace = true

[dev-dependencies]
pyo3 = { workspace = true, features = ["auto-initialize"] }
