[package]
name = "mlt-pyo3"
description = "Python bindings for MapLibre Tile (MLT) format via PyO3"
version = "0.1.2"
readme = "README.md"
repository.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[lib]
name = "mlt_pyo3"
crate-type = ["cdylib"]

[features]
abi3 = ["pyo3/abi3-py39", "generate-import-lib"]
generate-import-lib = ["pyo3/generate-import-lib"]

[dependencies]
geo-types.workspace = true
mlt-core.workspace = true
pyo3.workspace = true
serde_json.workspace = true

[dev-dependencies]
pyo3 = { workspace = true, features = ["auto-initialize"] }
