[package]
name = "mlt-wasm"
description = "WebAssembly bindings for the MapLibre Tile (MLT) format"
version = "0.1.2"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O3", "--enable-simd", "--enable-bulk-memory"]

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys.workspace = true
mlt-core.workspace = true
wasm-bindgen.workspace = true

[lints]
workspace = true
