[package]
name = "mlt"
description = "MapLibre Tile Tools"
version = "0.1.0"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
crossterm.workspace = true
flate2.workspace = true
geo-types.workspace = true
mlt-core.workspace = true
ratatui.workspace = true
rayon.workspace = true
rstar.workspace = true
serde.workspace = true
serde_json.workspace = true
size_format.workspace = true
tabled.workspace = true
thousands.workspace = true

[lints]
workspace = true
