[package]
name = "mlt"
description = "MapLibre Tile Tools"
version = "0.1.1"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/rust-{ name }-v{ version }/{ name }-{ target }{ archive-suffix }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.'cfg(target_os = "windows")']
pkg-fmt = "zip"

[dependencies]
anyhow.workspace = true
clap.workspace = true
crossterm.workspace = true
flate2.workspace = true
geo-types.workspace = true
glob.workspace = true
globset.workspace = true
json5.workspace = true
mlt-core.workspace = true
ratatui.workspace = true
rayon.workspace = true
rstar.workspace = true
serde.workspace = true
serde_json.workspace = true
size_format.workspace = true
tabled.workspace = true
thousands.workspace = true

[lints]
workspace = true
