[package]
name = "mlt"
description = "MapLibre Tile Tools"
version = "0.1.8"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/rust-{ name }-v{ version }/{ name }-{ target }{ archive-suffix }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.'cfg(target_os = "windows")']
pkg-fmt = "zip"

[features]
__hotpath = ["hotpath/hotpath", "hotpath/tokio", "hotpath/threads", "hotpath/tui"]
__hotpath-alloc = ["__hotpath", "hotpath/hotpath-alloc"]
__hotpath-mcp = [
    "__hotpath",
    "hotpath/hotpath-mcp",
    "hotpath/hotpath-mcp-meta",
    "hotpath/hotpath-meta",
]

[dependencies]
anyhow.workspace = true
clap.workspace = true
crossterm.workspace = true
flate2.workspace = true
futures.workspace = true
geo-types.workspace = true
glob.workspace = true
globset.workspace = true
hotpath.workspace = true
indicatif.workspace = true
martin-tile-utils.workspace = true
mbtiles.workspace = true
mlt-core.workspace = true
moka.workspace = true
ratatui.workspace = true
rayon.workspace = true
rstar.workspace = true
serde.workspace = true
serde_json.workspace = true
size_format.workspace = true
sqlx.workspace = true
tabled.workspace = true
thousands.workspace = true
tokio.workspace = true
walkdir.workspace = true
xxhash-rust.workspace = true

[lints]
workspace = true
